--- a/html/index.html
+++ b/html/index.html
@@ -9,7 +9,8 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.1/css/all.css" integrity="sha384-gfdkjb5BdAXd+lj+gudLWI+BXq4IuLW5IT+brZEZsLFm++aCMlF1V92rMkPaX4PP"
+        crossorigin="anonymous">
 </head>
 
 <body>
@@ -37,15 +38,8 @@
 
     <section id="tabs" class="container bg-light mt-5 pt-5 h-100">
         <div id="category" class="my-4 d-flex flex-column align-items-center justify-content-center">
-            <div id="sales" class="w-75 shadow px-6 py-5 bg-white rounded mb-4">
-                <h4 class="ribbon">Information Technology</h4>
-            </div>
-            <div id="developer" class="w-75 shadow px-6 py-5 mb-4 bg-white rounded">
-                <h4 class="ribbon">Developers</h1>
-            </div>
         </div>
-    
-    
+
     </section>
 
 
